--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Vue Cards</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -11,12 +12,11 @@
             <h1>{{ header }}</h1>
             <button v-if="status === 'default'" @click="changeStatus('edit')">Add Card</button>
             <button v-else @click="changeStatus('default')">Cancel</button>
-            <button>Remove Card</button>
             <div class="card-form" v-if="status === 'edit'">
                 <input class="card-form-short" v-model="newCard.name" type="text" placeholder="Name">
                 <input class="card-form-short" v-model="newCard.date" type="text" placeholder="Date">
                 <textarea class="card-form-long" v-model="newCard.text" name="Message" cols="40" rows="5" placeholder="Message"></textarea>
-                <button :disabled="newCard.length === 0" @click="saveItem">Save Card</button>
+                <button @click="saveItem">Save Card</button>
             </div>
         </header>
         <main class="card-container">
@@ -48,11 +48,11 @@
                     text: ''
                 },
                 cards: [
-                    {
-                        name: 'Tom',
-                        date: '09/21/2019',
-                        text: 'Pieces of Eight heave down deadlights me line keelhaul. Come about red ensign pink maroon prow loaded to the gunwalls. Jolly Roger clipper to go on account smartly yo-ho-ho rigging. Lugsail yo-ho-ho loot spirits come about brigantine. Dance the hempen jig yard topmast swing the lead mizzenmast transom. Quarter Pirate Round mutiny Blimey swab no prey, no pay. Topmast clipper shrouds cutlass list warp.'
-                    },
+                    // {
+                    //     name: 'Tom',
+                    //     date: '09/21/2019',
+                    //     text: 'Pieces of Eight heave down deadlights me line keelhaul. Come about red ensign pink maroon prow loaded to the gunwalls. Jolly Roger clipper to go on account smartly yo-ho-ho rigging. Lugsail yo-ho-ho loot spirits come about brigantine. Dance the hempen jig yard topmast swing the lead mizzenmast transom. Quarter Pirate Round mutiny Blimey swab no prey, no pay. Topmast clipper shrouds cutlass list warp.'
+                    // },
                 ]
             },
             methods: {
@@ -68,7 +68,6 @@
                 },
                 changeStatus: function(newStatus) {
                     this.status = newStatus;
-                    console.log('Changed!');
                 }
             },   
         });
